fix: close project button alignment

--- a/src/components/project-item/styles.css
+++ b/src/components/project-item/styles.css
@@ -92,8 +92,10 @@ button.close-project {
         color: rgb(90,90,90);
         content: "×";
         cursor: pointer;
+        font-family: sans-serif;
         font-size: 36px;
         left: 0;
+        line-height: 100%;
         position: absolute;
         top: calc(50% - 20px);
         width: 100%;
